--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -43,8 +43,7 @@ body {
 h1 {
   font-family: "Eczar", serif;
   font-weight: 600;
-  line-height: 1.2;
-  // font-size: 4.7rem;
+  line-height: 1.3;
 }
 
 h2 {
